# mcp-iot-poc

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_IMPLEMENTATION_PLAN.md  GEMINI.md  README.md  docker-compose.yml  mcp-iot-lunch-learn-plan.md  test_results.txt  test_results_refactor.txt
.github/: copilot-instructions.md
.github/workflows/: build-and-push.yml
agent/: .coverage  .coveragerc  Dockerfile  pyproject.toml  pytest.ini
agent/src/climate_agent/: __init__.py  decision_logger.py  llm_factory.py  llm_provider.py  main.py  mcp_client.py  ollama_client.py  web_dashboard.py
agent/src/climate_agent/providers/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
agent/tests/: conftest.py  test_baseline_automation.py  test_decision_logger.py  test_initialization.py  test_llm_providers.py  test_mcp_client.py  test_ollama_client.py  test_web_dashboard.py
config/: system_prompt.md  system_prompt_backup.md
docs/: AUTH0_PLAN.md  CODE_REVIEW.md  OCCUPANCY_PLAN.md  SECURITY_ENHANCEMENTS.md  mcp-iot-lunch-learn-plan.md
presentation/: LUNCH_AND_LEARN.md
servers/ecobee-mcp/: Dockerfile  pyproject.toml
servers/ecobee-mcp/src/ecobee_mcp/: __init__.py  server.py
servers/ecobee-mcp/tools/: auth_setup.py
servers/homeassistant-mcp/: Dockerfile  pyproject.toml
servers/homeassistant-mcp/src/ha_mcp/: __init__.py  server.py
servers/weather-mcp/: Dockerfile  pyproject.toml
servers/weather-mcp/src/weather_mcp/: __init__.py  server.py
