[project]
name = "climate-agent"
version = "0.1.0"
description = "Autonomous AI agent for climate control using MCP"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.111.0",
    "jinja2>=3.1.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
