[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecobee-mcp"
version = "0.1.0"
description = "MCP server for Ecobee Thermostat control"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=0.1.0",
    "httpx>=0.27.0",
    "uvicorn>=0.29.0",
    "starlette>=0.37.0",
    "sse-starlette>=2.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ecobee-mcp = "ecobee_mcp.server:main"
ecobee-auth = "ecobee_mcp.auth_setup:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecobee_mcp"]
